--- a/Example/02_EnergyLand/02_Energyland.ipynb
+++ b/Example/02_EnergyLand/02_Energyland.ipynb
@@ -1688,7 +1688,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "energysysalt.mgaOptimize(\n",
+    "energysysalt.optimize.mgaOptimize(\n",
     "    esM,\n",
     "    timeSeriesAggregation=True,\n",
     "    optimizationSpecs=\"OptimalityTol=1e-3 method=2 cuts=0 MIPGap=5e-3\",\n",
