--- a/Example/03_Multi-regional_Energy_System_Workflow/03_Multi-regional_Energy_System_Workflow.ipynb
+++ b/Example/03_Multi-regional_Energy_System_Workflow/03_Multi-regional_Energy_System_Workflow.ipynb
@@ -1025,7 +1025,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "energysysalt.mgaOptimize(\n",
+    "energysysalt.optimize.mgaOptimize(\n",
     "    esM,\n",
     "    timeSeriesAggregation=True,\n",
     "    optimizationSpecs=\"OptimalityTol=1e-3 method=2 cuts=0 MIPGap=5e-3\",\n",
